added firebase authcontext authprovider and nevbar implement

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,54 @@
 @plugin "daisyui/theme" {
   name: "light";
   default: true;
-  --color-primary: blue;
-  --color-secondary: teal;
+  --color-primary: #9ab;
+  --color-secondary: #fff;
+}
+/* custom css */
+/* body{
+  background: #14181c;
+} */
+.body-width{
+  max-width: 1350px;
+  margin: 0 auto 0 auto;
+}
+.text-color{
+  color: var(--color-primary);
+}
+.smooth-underline {
+  position: relative;
+  display: inline-block;
+  padding-bottom: 4px;
+  font-weight: bold;
+  color: var(--color-primary);
+  font-size: 1.125rem;        
+}
+
+.smooth-underline::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 2px;
+  width: 0;
+  background: currentColor;
+  transition: width 0.3s ease-in-out;
+}
+
+.smooth-underline:hover::after {
+  width: 100%;
+}
+
+.smooth-border-underline {
+  display: inline-block;
+  font-size: 1.125rem;        
+  font-weight: bold;     
+  padding-bottom: 0.25rem;   
+  border-bottom: 2px solid transparent; 
+  color: var(--color-secondary);  
+  transition: border-color 0.3s ease-in-out; 
+}
+
+.smooth-border-underline.active {
+  border-color: currentColor;
 }
